Endoint /getWorkers now has the option to return workers whose work days match a given list in the request parameters.
